--- a/The North Rent System/The North Rent System/The North Rent System.csproj
+++ b/The North Rent System/The North Rent System/The North Rent System.csproj
@@ -56,6 +56,24 @@
     <Compile Include="FirstPage.Designer.cs">
       <DependentUpon>FirstPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form3.Designer.cs">
+      <DependentUpon>Form3.cs</DependentUpon>
+    </Compile>
     <Compile Include="KullaniciBilgileri.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,9 +94,75 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TheNorthDBODataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TheNorthDBODataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TheNorthDBODataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TheNorthDBODataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TheNorthDBODataSet10.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TheNorthDBODataSet10.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TheNorthDBODataSet11.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TheNorthDBODataSet11.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TheNorthDBODataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TheNorthDBODataSet2.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TheNorthDBODataSet3.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TheNorthDBODataSet3.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TheNorthDBODataSet4.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TheNorthDBODataSet4.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TheNorthDBODataSet5.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TheNorthDBODataSet5.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TheNorthDBODataSet6.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TheNorthDBODataSet6.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TheNorthDBODataSet7.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TheNorthDBODataSet7.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TheNorthDBODataSet8.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TheNorthDBODataSet8.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TheNorthDBODataSet9.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TheNorthDBODataSet9.xsd</DependentUpon>
+    </Compile>
     <Compile Include="XGraphics.cs" />
     <EmbeddedResource Include="FirstPage.resx">
       <DependentUpon>FirstPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form3.resx">
+      <DependentUpon>Form3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="KullaniciBilgileri.resx">
       <DependentUpon>KullaniciBilgileri.cs</DependentUpon>
@@ -108,6 +192,138 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="TheNorthDBODataSet.xsc">
+      <DependentUpon>TheNorthDBODataSet.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TheNorthDBODataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TheNorthDBODataSet.xss">
+      <DependentUpon>TheNorthDBODataSet.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet1.xsc">
+      <DependentUpon>TheNorthDBODataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TheNorthDBODataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TheNorthDBODataSet1.xss">
+      <DependentUpon>TheNorthDBODataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet10.xsc">
+      <DependentUpon>TheNorthDBODataSet10.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet10.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TheNorthDBODataSet10.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TheNorthDBODataSet10.xss">
+      <DependentUpon>TheNorthDBODataSet10.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet11.xsc">
+      <DependentUpon>TheNorthDBODataSet11.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet11.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TheNorthDBODataSet11.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TheNorthDBODataSet11.xss">
+      <DependentUpon>TheNorthDBODataSet11.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet2.xsc">
+      <DependentUpon>TheNorthDBODataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TheNorthDBODataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TheNorthDBODataSet2.xss">
+      <DependentUpon>TheNorthDBODataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet3.xsc">
+      <DependentUpon>TheNorthDBODataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet3.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TheNorthDBODataSet3.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TheNorthDBODataSet3.xss">
+      <DependentUpon>TheNorthDBODataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet4.xsc">
+      <DependentUpon>TheNorthDBODataSet4.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet4.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TheNorthDBODataSet4.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TheNorthDBODataSet4.xss">
+      <DependentUpon>TheNorthDBODataSet4.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet5.xsc">
+      <DependentUpon>TheNorthDBODataSet5.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet5.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TheNorthDBODataSet5.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TheNorthDBODataSet5.xss">
+      <DependentUpon>TheNorthDBODataSet5.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet6.xsc">
+      <DependentUpon>TheNorthDBODataSet6.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet6.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TheNorthDBODataSet6.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TheNorthDBODataSet6.xss">
+      <DependentUpon>TheNorthDBODataSet6.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet7.xsc">
+      <DependentUpon>TheNorthDBODataSet7.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet7.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TheNorthDBODataSet7.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TheNorthDBODataSet7.xss">
+      <DependentUpon>TheNorthDBODataSet7.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet8.xsc">
+      <DependentUpon>TheNorthDBODataSet8.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet8.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TheNorthDBODataSet8.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TheNorthDBODataSet8.xss">
+      <DependentUpon>TheNorthDBODataSet8.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet9.xsc">
+      <DependentUpon>TheNorthDBODataSet9.xsd</DependentUpon>
+    </None>
+    <None Include="TheNorthDBODataSet9.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TheNorthDBODataSet9.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TheNorthDBODataSet9.xss">
+      <DependentUpon>TheNorthDBODataSet9.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
